# mac-build-prototyping

./: CMakeLists.txt  README.md  myexecutable.cpp  mylib.cpp  run.sh  testcall.cpp  useslua.c  usesluacpp.cpp
